--- a/index.html
+++ b/index.html
@@ -13,16 +13,51 @@
     />
 
     <title>Frontend Mentor | Four card feature section</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <div class="container">
+      <section class="intro">
+        <h1 class="intro__title">
+          Reliable, efficient delivery <span>Powered by Technology</span>
+        </h1>
+        <p class="intro__body">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </section>
+      <div class="cards">
+        <section class="cards__item supervisor">
+          <h2 class="cards__item--title">Supervisor</h2>
+          <p class="cards__item--body">
+            Monitors activity to identify project roadblocks
+          </p>
+        </section>
+        <section class="cards__item team">
+          <h2 class="cards__item--title">Team Builder</h2>
+          <p class="cards__item--body">
+            Scans our talent network to create the optimal team for your project
+          </p>
+        </section>
+        <section class="cards__item karma">
+          <h2 class="cards__item--title">Karma</h2>
+          <p class="cards__item--body">
+            Regularly evaluates our talent to ensure quality
+          </p>
+        </section>
+        <section class="cards__item calc">
+          <h2 class="cards__item--title">Calculator</h2>
+          <p class="cards__item--body">
+            Uses data from past projects to provide better delivery estimates
+          </p>
+        </section>
+      </div>
+    </div>
 
     <footer>
       <p class="attribution">
